# lines-daw

./: .editorconfig  .gitmodules  CMakeLists.txt
cmake/: FindJACK.cmake  Raylib.cmake  RtAudio.cmake
include/: audiobuffer.hpp  constants.h  helpers.hpp  lines.h  lines.hpp  track.h  track.hpp  utilitytracks.hpp
include/terminal/: ux.hpp
src/: audiobuffer.hpp  helpers.hpp  lines.cpp  lines.hpp  lines_processing.cpp  linesux.hpp  main.cpp  timebase.hpp  track.cpp  track_metronome.cpp
src/audiobuffers/: track.cpp  track_metronome.cpp  tracks.hpp
src/raylibui/: ux.cpp  ux.hpp
src/terminal/: ux.cpp  ux.hpp
